--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
             margin: 0px;
-            background-image: url("https://wallpapercave.com/wp/wp9315285.jpg");
+            background-image: url("https://wallpaperaccess.com/full/1759696.jpg");
             min-height: 100vh;
             background-size: cover;
         }
@@ -20,7 +20,7 @@
             margin-top: 5%;
             padding: 22px;
             border-radius: 18px;
-            background-color: rgba(255, 255, 255, 0.22);
+            background-color: rgba(24, 23, 23, 0.22);
             border: 1px solid rgba(255, 255, 255, 0.25);
             box-shadow: 0 8px 30px rgba(0, 0, 0, 0.15);
 
@@ -31,7 +31,7 @@
         .parent-container h1 {
             font-size: 2rem;
             text-align: center;
-            color: rgba(0, 0, 0, 0.89);
+            color: rgba(255, 255, 255, 0.89);
             font-family: sans-serif;
         }
 
@@ -53,7 +53,7 @@
 
         .form-field input {
             padding: 10px;
-           
+           color: rgb(0, 0, 0);
             font-size: 1.3rem;
             margin-bottom: 20px;
             border: 0px;
@@ -78,9 +78,9 @@
         }
 
         .parent-container button {
-            background-color: rgba(0, 0, 0, 0.727);
+            background-color: rgba(223, 223, 223, 0.727);
             padding: 10px;
-            color: white;
+            color: black;
             width: 90%;
             max-width: 200px;
             font-size: 1.3rem;
